# Phiversity

./: .dockerignore  .env.example  .gitignore  .railwayignore  COMPLETE_FIX_SUMMARY.md  Comprehensive_Prompt.txt  DELIVERY_SUMMARY.md  DEPENDENCIES_VERIFIED.md  DEPLOY.md  DEPLOYMENT_CHECKLIST.md  DISASTER_RECOVERY_RUNBOOK.md  DOCUMENTATION_README.md  Dockerfile  ELEVENLABS_SETUP.md  ENHANCED_OPTIMIZER_QREF.md  FIX_SUMMARY.md  FRONTEND_BACKEND_INTEGRATION.md  INDEX.md  INTEGRATION_CHECKLIST.txt  INTRO_VIDEO_README.md  KAMAL_DEPLOYMENT.md  LAYOUT_COLLISION_IMPLEMENTATION.md  LOGICAL_ERRORS_FIXED.md  LOGICAL_FLAWS_FIXED.md  LOGO_WATERMARK_SETUP.md  MANIMATIONS_DOCUMENTATION.docx  OVERLAP_FIX_SUMMARY.md  OVERLAP_RESOLUTION_GUIDE.md  OVERLAP_RESOLUTION_V3.md  Phiversity_Colab_Deployment.ipynb  Phiversity_Obsidian.md  Prompt.bak  Prompt.json  Prompt.txt  QUALITY_ASSURANCE_IMPLEMENTATION.md  QUICK_REFERENCE.py  RAILWAY_DEPLOYMENT.md  README.md  RUN_PHIVERSITY.txt  START_SERVER.ps1  (+37 more)
alembic/: env.py
api/: app.py
config/: deploy.yml
deployment/: docker-compose.yml  railway.json  render.yaml
docs/: ALGORITHM_DELIVERY_SUMMARY.md  ALL_SYSTEMS_READY.md  APPLICATION_READY.md  AUDIO_SYNC_IMPROVEMENTS.md  CLOUD_QUICKSTART.md  CLOUD_SETUP_SUMMARY.md  COMPLETE_DELIVERY_STATUS.md  COMPLETE_SOLUTION_README.md  COMPREHENSIVE_OPTIMIZER_DEPLOYMENT.md  COMPREHENSIVE_OPTIMIZER_FINAL_REPORT.md  COMPREHENSIVE_OPTIMIZER_GUIDE.md  COMPREHENSIVE_OPTIMIZER_IMPLEMENTATION_SUMMARY.md  COMPREHENSIVE_OPTIMIZER_QUICKSTART.md  COMPREHENSIVE_OPTIMIZER_README.md  Comprehensive_Prompt.txt  LOGIN_SETUP.md  (+34 more)
(+141 files in other folders)
